# ir-assignment-2

./: .gitignore  Assignment_2_Report.docx  Assignment_2_Report.md  Episodic Memory for Adaptive Agent Planning (1).pptx  HANDOVER.md  README.md  presentation.pptx  pyproject.toml
.claude/: settings.local.json
experiments/: _common.py  exp1_methods.py  exp2_representation.py  exp3_success_failure.py  exp4_topk.py  exp5_weights.py  run_all.py
scripts/: build_indices.py  download_datasets.py  make_presentation.py
src/episodic/: __init__.py  schema.py
src/episodic/agent/: __init__.py  prompt_aug.py  simulated_agent.py  tool_bias.py
src/episodic/eval/: __init__.py  downstream.py  ir_metrics.py  relevance.py
src/episodic/indexing/: __init__.py  bm25_index.py  dense_index.py  kg_index.py  metadata_store.py  tokenize.py
src/episodic/loaders/: __init__.py  ace.py  msc.py
src/episodic/rerank/: __init__.py  heuristics.py  ltr.py
src/episodic/retrieval/: __init__.py  base.py  bm25.py  cross_encoder.py  dense.py  field_aware.py  graph_augmented.py  hybrid.py  kg.py
tests/: conftest.py  test_agent.py  test_bm25.py  test_cross_encoder.py  test_dense.py  test_graph_augmented.py  test_hybrid.py  test_kg.py  test_metrics.py  test_schema.py
